Fixed service and endpoint tests for billable condition. Refs #8